Fix news title wrap-around and limit card height

--- a/webapp/src/main/webapp/resources/css/custom.css
+++ b/webapp/src/main/webapp/resources/css/custom.css
@@ -155,6 +155,8 @@
     text-overflow: ellipsis;
 }
 
+
+
 .text-ellipsis-1 {
     display: -webkit-box;
     -webkit-line-clamp: 1;
@@ -169,6 +171,10 @@
 .max-h-40px {
     max-height: 40px;
     min-height: 30px;
+}
+
+.overflow-wrap {
+    overflow-wrap: break-word;
 }
 
 .object-cover {
